# ipv6ddns

./: .gitignore  .iflow_pr_plan.json  .iflow_review_79.json  .iflow_review_80.json  .iflow_review_81.json  .iflow_review_82.json  .iflow_review_83.json  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IFLOW.md  LICENSE  README.md  deny.toml  deploy.sh
.github/: dependabot.yml
.github/workflows/: codeql.yml  iflow-council.yml  iflow-nightly.yml  release.yml
.iflow/agents/: deepseek-innovator.md  deepseek-refactor.md  deepseek-vice-2.md  glm-chair-1.md  glm-lead.md  glm-maintainer.md  kimi-ci-docs.md  kimi-junior-3.md  kimi-qa-docs.md
.iflow/skills/ci-docs-hygiene/: SKILL.md
.iflow/skills/council-review/: SKILL.md
.iflow/skills/pr-submit/: SKILL.md
.iflow/skills/refactor-innovation/: SKILL.md
.iflow/skills/rust-maintenance/: SKILL.md
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/java/com/neycrol/ipv6ddns/: MainActivityTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: .keep
android/app/src/main/java/com/neycrol/ipv6ddns/: MainActivity.kt
android/app/src/main/java/com/neycrol/ipv6ddns/data/: Config.kt  ConfigStore.kt  ConfigToml.kt
android/app/src/main/java/com/neycrol/ipv6ddns/service/: BinaryManager.kt  Ipv6DdnsService.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/values-zh-rCN/: strings.xml
android/app/src/test/java/com/neycrol/ipv6ddns/: MainActivityTest.kt
etc/: config.toml  ipv6ddns.service
packaging/: APKBUILD  ipv6ddns.desktop  ipv6ddns.initd  ipv6ddns.pre-install
packaging/arch/: PKGBUILD
packaging/archlinuxarm/: PKGBUILD
scripts/ci/: Dockerfile.test  build-android.sh  build-artifacts.sh  functional-test.sh  iflow_auto_pr.py  iflow_cli_patch.py  iflow_post_review.py  verify-artifacts.sh
src/: cloudflare.rs  config.rs  constants.rs  daemon.rs  dns_provider.rs  health.rs  main.rs  metrics.rs  netlink.rs  validation.rs
tests/: config_test.rs
(+2 files in other folders)
