[package]
name = "ipv6ddns"
version = "1.0.0"
edition = "2021"
description = "Event-driven IPv6 DDNS client for Cloudflare"
authors = ["xishaoa"]

[dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "net", "time", "macros", "signal", "sync", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
async-trait = "0.1"
urlencoding = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[package.metadata.deb]
maintainer = "Neycrol <neycrol@users.noreply.github.com>"
license-file = ["LICENSE", "4"]
assets = [
  ["target/release/ipv6ddns", "usr/bin/ipv6ddns", "755"],
  ["etc/ipv6ddns.service", "lib/systemd/system/ipv6ddns.service", "644"],
  ["etc/config.toml", "etc/ipv6ddns/config.toml", "644"],
  ["README.md", "usr/share/doc/ipv6ddns/README.md", "644"],
]
